se corrigen algunos textos

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             <div class="col-sm-12">
                 <div class="title">
                     <br><br>
-                    <h1>Picas y Fijas</h1><br><br>
+                    <h1 id="name">Picas y Fijas</h1><br><br>
                     <div>
-                        <p class="error">Escribe 4 dígitos diferentes</p>
+                        <p class="error">Para juagar sólo debes escribir un número de 4 digitos diferentes</p>
                     </div>
                     <br><br>
                 </div>
-                <div class="input"><input maxlength="4" type="text" id="new-number" placeholder="Tú puedes!"></div>
-                <table class="table bordered-table table-striped text-center">
+                <div class="input"><input maxlength="4" type="text" id="new-number" placeholder="Número"></div>
+                <table class="table table-bordered table-striped text-center">
                     <thead>
                         <tr>
                             <th>Número</th>
@@ -43,7 +43,7 @@
     <div class="winner">
         <br><br><br><br><br><br><br><br><br><br><br><br>
         <h1 id="win">¡GANASTE!</h1><br><br>
-        <button type="button" id="new-game">Jugar de Nuevo</button>
+        <button type="button" class="btn btn-default btn-lg" id="new-game">Jugar de Nuevo</button>
     </div>
 </body>
 
