--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                     </div>
                     <br><br>
                 </div>
-                <div class="input"><input maxlength="4" type="text" id="new-number" placeholder="Número"></div>
+                <div class="form-group input">
+                    <input class="form-control" maxlength="4" type="text" id="new-number" placeholder="Número">
+                </div>
                 <table class="table table-bordered table-striped text-center">
                     <thead>
                         <tr>
