--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
                     </div>
                     <br><br>
                 </div>
+                <div class="row">
+                    <div class="col-md-2 col-xs-offset-5">
                 <div class="form-group input">
                     <input class="form-control" maxlength="4" type="text" id="new-number" placeholder="Número">
                 </div>
+            </div>
+            </div>
                 <table class="table table-bordered table-striped text-center">
                     <thead>
                         <tr>
